--- a/templates/index.html
+++ b/templates/index.html
@@ -5,21 +5,34 @@
     <meta charset="UTF-8">
     <title>SHOP</title>
     <link rel="stylesheet" href="{% static 'style.css' %}">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+    <script src="{% static '1.js' %}" defer></script>
 </head>
 <body>
 <header>
-   <a href="{% url 'toKorz' %}"> <button>Корзина</button></a>
+    <a href="{% url 'toKorz' %}">
+        <button>Корзина</button>
+    </a>
 </header>
 <main>
     {% for one in tovari %}
-    <div class="card">
-        <img src="{% static one.image %}" alt="">
-        <p>{{ one.opis }}</p>
-        <p>{{ one.price }} рублей</p>
-        <a href="{% url 'buy' one.id %}"> <button>Купить</button></a>
+        <div class="card">
+            <a href="{% url 'toIzbran' %}" onclick="f11(event,{{ one.id }})">
+                {% if one.id in izbran.tovar_id %}
+                    <img src="{% static 'img/red.png' %}" alt="" class="serdce">
+                {% else %}
+                    <img src="{% static 'img/white.png' %}" alt="" class="serdce">
+                {% endif %}
+            </a>
+            <img src="{% static one.image %}" alt="">
+            <p>{{ one.opis }}</p>
+            <p>{{ one.price }} рублей</p>
+            <a href="{% url 'buy' one.id %}">
+                <button>Купить</button>
+            </a>
 
 
-    </div>
+        </div>
     {% endfor %}
 </main>
 </body>
