--- a/templates/korzina.html
+++ b/templates/korzina.html
@@ -14,11 +14,15 @@
             <td>{{ one.tovar.opis }}</td>
 
             <td>
-                <a href="{% url 'count' -1 one.id %}"><button>-</button></a>
+                <a href="{% url 'count' -1 one.id %}">
+                    <button>-</button>
+                </a>
             </td>
             <td>{{ one.count }} шт</td>
             <td>
-                <a href="{% url 'count' 1 one.id %}"><button>+</button></a>
+                <a href="{% url 'count' 1 one.id %}">
+                    <button>+</button>
+                </a>
             </td>
 
             <td>Цена:{{ one.summa }} руб</td>
@@ -34,16 +38,27 @@
 <h2>Сумма итого: {{ itog }} рублей</h2>
 <button id="fin">Оформить заказ</button>
 <div id="forma" hidden>
-    <label for="adres">Напишите город</label>
-    <input autocomplete="off" id="adres" type="text" name="adres">
+    <form action="" novalidate method="POST" id="forma1">
+        {% csrf_token %}
 
-    <label for="name">Напишите имя</label>
-    <input autocomplete="off" id="name" type="text" name="name">
+        {#    <label for="adres">Напишите город</label>#}
+        {#    <input autocomplete="off" id="adres" type="text" name="adres">#}
+        {##}
+        {#    <label for="name">Напишите имя</label>#}
+        {#    <input autocomplete="off" id="name" type="text" name="name">#}
+        {##}
+        {#    <label for="tel">Напишите телефон</label>#}
+        {#    <input autocomplete="off" id="tel" type="text" name="tel">#}
+        {##}
+        {% for f in myform %}
+            <div>{{ f.label_tag }}</div>
+            <div>{{ f }}</div>
+            <div>{{ f.errors }}</div>
+        {% endfor %}
+        <input id="fin2" type="button" value="Подтвердить" onclick="f3()">
+{#        <input id="myformbut" type="submit" value="Подтвердить1">#}
+    </form>
 
-    <label for="tel">Напишите телефон</label>
-    <input autocomplete="off" id="tel" type="text" name="tel">
-
-    <input id="fin2" type="button" value="Подтвердить" onclick="f3()">
 </div>
 
 </body>
